...
                android:gravity="center" android:orientation="horizontal" android:padding="6dp">
                <Button android:id="@+id/tab_library" style="@style/Widget.SubHub.SegmentedButton"
                    android:text="@string/studio_library" />
                <Button android:id="@+id/tab_drafts" style="@style/Widget.SubHub.SegmentedButton"
                    android:layout_marginStart="5dp"
                    android:text="@string/studio_drafts" />
                <Button android:id="@+id/tab_create" style="@style/Widget.SubHub.SegmentedButton"
                    android:layout_marginStart="5dp"
                    android:text="@string/studio_create" />
            </LinearLayout>

            <LinearLayout android:id="@+id/library_panel" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="@dimen/ui_gap_group"
...

            <LinearLayout android:id="@+id/create_panel" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="@dimen/ui_gap_group"
                android:orientation="vertical" android:visibility="gone">
                <Button android:id="@+id/button_blank" style="@style/Widget.SubHub.PrimaryButton"
                    android:text="@string/studio_start_blank" />
                <Button android:id="@+id/button_capture" style="@style/Widget.SubHub.CompactOutlineButton"
                    android:layout_marginTop="@dimen/ui_gap_control" android:text="@string/studio_capture_current" />
            </LinearLayout>

            <LinearLayout android:id="@+id/editor_panel" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="@dimen/ui_gap_group"
                android:orientation="vertical" android:visibility="gone">
...

                <LinearLayout android:id="@+id/review_step" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/ui_gap_group" android:background="@drawable/bg_card"
                    android:orientation="vertical" android:padding="@dimen/ui_gap_group">
                    <TextView style="@style/Widget.SubHub.SectionHeader"
                        android:text="@string/studio_preview" />
                    <TextView android:id="@+id/preview_text" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:layout_marginTop="@dimen/ui_gap_control"
                        android:background="@drawable/bg_card" android:padding="@dimen/ui_gap_group"
                        android:textColor="@color/text_secondary" android:textSize="@dimen/ui_text_label" />
                </LinearLayout>

                <Button android:id="@+id/button_publish" style="@style/Widget.SubHub.PrimaryButton"
                    android:layout_marginTop="@dimen/ui_gap_group" android:text="@string/studio_add_library" />
                <Button android:id="@+id/button_export" style="@style/Widget.SubHub.CompactOutlineButton"
                    android:layout_marginTop="@dimen/ui_gap_control" android:text="@string/studio_export_share" />
                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="horizontal" android:layout_marginTop="@dimen/ui_gap_group">
                    <Button android:id="@+id/editor_back" style="@style/Widget.SubHub.CompactOutlineButton"
                        android:layout_width="0dp" android:layout_weight="1"
                        android:text="@string/pack_editor_back" />
...
