<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_navigation"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/bottom_nav_height"
    android:layout_marginHorizontal="@dimen/bottom_nav_margin"
    android:layout_marginBottom="@dimen/bottom_nav_bottom_margin"
    android:layout_gravity="bottom"
...
